ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: receiptablity-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: receiptablity.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: receiptablity-service
                port:
                  number: 80
